Wed May 12 11:51:08 2004  Dave Thomas  <dave@pragprog.com>

	* class.c (rb_obj_singleton_methods): fix rdoc

Mon May 10 22:28:14 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb (each_crlf_line): remove junk line.

Mon May 10 21:44:42 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Change scheme for
	  looking up symbols in  HTML generator.

Mon May 10 16:45:21 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (eval): warning during eval should not cause deadlock.
	  [ruby-talk:98651]

	* eval.c (rb_eval): raise TypeError exception for superclass
	  mismatch.  [ruby-dev:39567]

Mon May 10 12:11:37 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Hack to search parents
	  for unqualified constant names.

Mon May 10 01:18:15 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb (loggin): append "\n".

Sun May  9 23:38:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/net/ftp.rb: ported documentation improvement from 1.8 branch

	* lib/net/imap.rb:   ditto

	* lib/net/pop.rb:    ditto

	* lib/net/smtp.rb:   ditto

	* lib/net/telnet.rb: ditto

Sun May  9 23:34:51 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/test_float.rb: added test_strtod to test Float("0").

Sun May  9 13:24:24 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/yaml/store.rb: use FileUtils::copy.

Sun May  9 12:34:26 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regex.c : removed unused file.

Sat May  8 10:53:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_open): open should not ignore block when "to_open"
	  method is used.  [ruby-dev:23478]

Fri May  7 22:07:39 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): new option `force'. [ruby-talk:99457]

	* lib/fileutils.rb: new method for command option reflection:
	  FileUtils.commands, .options, .have_option?, .options_of,
	  .collect_methods.
